更新 VSCode 启动配置，修改训练参数以使用新的 tsn_imagenet-pretrained-r50_bird_uav.py 配置文件

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "tools/train.py",
             "console": "integratedTerminal",
             "args": [
-                "configs/recognition/slowfast/slowfast_r50_uav_bird.py",
-                "--work-dir", "output",
+                "configs/recognition/tsn/tsn_imagenet-pretrained-r50_bird_uav.py",
+                "--work-dir", "./output/ts",
             ]
         },
         {
