--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "tools/train.py",
             "console": "integratedTerminal",
             "args": [
-                "configs/recognition/slowfast/slowfast_r50_uav_bird.py",
-                "--work-dir", "./output/slowfast",
+                "configs/recognition/tsm/tsm_imagenet-bird_uav.py",
+                "--work-dir", "./output/tsm",
                 "--amp"
             ]
         },
@@ -39,9 +39,9 @@
             "program": "demo/demo.py",
             "console": "integratedTerminal",
             "args": [
-                "output/slowfast_r50_uav_bird.py",
-                "output/best_acc_top1_epoch_110.pth",
-                "/mnt/data_80/data/samba_share/Infrared/110/drone+bird_3.20/videos/drone/drone-3.20-1.mp4",
+                "output/tsm/tsm_imagenet-bird_uav.py",
+                "output/tsm/epoch_219.pth",
+                "/home/tl/data/datasets/video/uav2.mp4",
                 "output/track_targets_label_map.txt"
             ],
             "env": {
