--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,53 +1,62 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+	// 使用 IntelliSense 了解相关属性。
+	// 悬停以查看现有属性的描述。
+	// 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{ "name": "Python 调试程序: 当前文件", "type": "debugpy", "request": "launch", "program": "${file}", "console": "integratedTerminal" },
 
+		{
+			"name": "train",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "tools/train.py",
+			"console": "integratedTerminal",
+			"args": ["configs/recognition/tsm/tsm_imagenet-bird_uav_images.py", "--work-dir", "./output/tsm", "--amp"]
+		},
+		{
+			"name": "test",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "tools/test.py",
+			"console": "integratedTerminal",
+			"args": [
+				"output/tsm/tsm_imagenet-bird_uav.py",
+				"output/tsm/epoch_219.pth"
+				// "--show-dir", "output"
+			],
+			"justMyCode": false
+		},
+		{
+			"name": "demo",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "demo/demo.py",
+			"console": "integratedTerminal",
+			"args": [
+				"output/tsm/tsm_imagenet-bird_uav.py",
+				"output/tsm/epoch_219.pth",
+				"/home/tl/data/datasets/video/vidoe_recognition_data/7.mp4",
+				"output/track_targets_label_map.txt"
+			],
+			// "env": {
+			// 	"DISPLAY": "localhost:10.0"
+			// },
+			// "justMyCode": false
+		},
         {
-            "name": "train",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "tools/train.py",
-            "console": "integratedTerminal",
-            "args": [
-                "configs/recognition/tsm/tsm_imagenet-bird_uav.py",
-                "--work-dir", "./output/tsm",
-                "--amp"
-            ]
-        },
-        {
-            "name": "test",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "tools/test.py",
-            "console": "integratedTerminal",
-            "args": [
-                "configs/recognition/slowfast/slowfast_r50_uav_bird.py",
-                "output/best_acc_top1_epoch_205.pth",
-                // "--show-dir", "output"
-            ],
-            "env": {
-                "DISPLAY": "localhost:10.0",
-            },
-        },
-        {
-            "name": "demo",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "demo/demo.py",
-            "console": "integratedTerminal",
-            "args": [
-                "output/tsm/tsm_imagenet-bird_uav.py",
-                "output/tsm/epoch_219.pth",
-                "/home/tl/data/datasets/video/uav2.mp4",
-                "output/track_targets_label_map.txt"
-            ],
-            "env": {
-                "DISPLAY": "localhost:10.0",
-            },
-            "justMyCode": false
-        }
-    ]
+			"name": "export",
+			"type": "debugpy",
+			"request": "launch",
+			"program": "export.py",
+			"console": "integratedTerminal",
+			"args": [
+				"output/tsm/tsm_imagenet-bird_uav.py",
+				"output/tsm/epoch_219.pth",
+                "/home/tl/data/datasets/video/vidoe_recognition_data/1.mp4",
+				"output/track_targets_label_map.txt"
+			],
+            // "justMyCode": false
+		}
+	]
 }
